# QViC-MF

./: LICENSE  README.md  pyproject.toml
lmms-eval/lmms_eval/: evaluator.py
lmms-eval/lmms_eval/models/: __init__.py  llava.py  llava_onevision.py  llava_vid.py  qvic_mf.py
lmms-eval/lmms_eval/tasks/llava_wilder/: _default_template_wilder_yaml  utils.py
lmms-eval/lmms_eval/tasks/mathvista/: mathvista.yaml  mathvista_testmini.yaml
lmms-eval/lmms_eval/tasks/mmbench/: mmbench.yaml  mmbench_cc.yaml  mmbench_cn.yaml  mmbench_en.yaml  mmbench_evals.py
lmms-eval/lmms_eval/tasks/mmupd/: mmupd_evals.py
lmms-eval/lmms_eval/tasks/moviechat/: utils.py
lmms-eval/lmms_eval/tasks/mvbench/: utils.py
lmms-eval/lmms_eval/tasks/worldqa/: worldqa_mc_evaluator.py
playground/demo/: inference_qvic.py
qvic/: mm_utils.py  utils.py
qvic/eval/: model_video_lvbench.py  model_video_niah.py  model_vqa.py
qvic/model/: __init__.py  apply_delta.py  builder.py  consolidate.py  llava_arch.py  make_delta.py  qmsa.py  qvic_meta_mixin.py
qvic/model/language_model/: llava_llama.py  llava_mpt.py  llava_qwen.py  llava_qwen_moe.py  modeling_qwen2.py
qvic/model/multimodal_encoder/: clip_encoder.py  hf_vision.py  open_clip_encoder.py  siglip_encoder.py
qvic/model/multimodal_encoder/dev_eva_clip/: eva_vit.py
qvic/model/multimodal_encoder/eva_clip/: eva_clip_encoder.py  eva_vit.py
qvic/model/multimodal_resampler/: spatial_pool.py
scripts/: analyze_mlvu_lmms_eval_results.py  lvbench_format_annotation.py  postprocess_lmms_eval_mlvu.py
scripts/eval/: lmms_eval_qvic.sh  lvbench_eval_qvic.sh  niah_eval_qvic.sh
